--- a/build.xml
+++ b/build.xml
@@ -6,10 +6,12 @@
 <project name="glazedlists" default="jar" basedir=".">
 
 
-	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-	   BUILD ADMINISTRATION
-	   Create build directories and set up necessary paths.
-	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <property name="java.target.version" value="1.5"/>
+
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+       BUILD ADMINISTRATION
+       Create build directories and set up necessary paths.
+    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 	<target name="init">
 	</target>
@@ -47,14 +49,14 @@
 		</tstamp>
 		<!-- document all the source -->
 		<javadoc
-			destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="1.4">
+			destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="${java.target.version}">
 			<packageset dir="source">
 				<exclude name="**/impl/**"/>
 				<exclude name="**/demo/**"/>
 			</packageset>
 			<doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
 			<bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
-			<link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+			<link href="http://java.sun.com/j2se/${java.target.version}/docs/api/"/>
 			<link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
 		</javadoc>
 	</target>
@@ -72,12 +74,12 @@
 		</tstamp>
 		<!-- document all the source -->
 		<javadoc
-			destdir="docs/impldocs" access="protected" author="true" use="true" windowtitle="Glazed Lists - Internal" source="1.4">
+			destdir="docs/impldocs" access="protected" author="true" use="true" windowtitle="Glazed Lists - Internal" source="${java.target.version}">
 			<packageset dir="source"/>
 			<packageset dir="test"/>
 			<doctitle><![CDATA[<h1>Glazed Lists - Developer Docs</h1>]]></doctitle>
 			<bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
-			<link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+			<link href="http://java.sun.com/j2se/${java.target.version}/docs/api/"/>
 			<link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
 		</javadoc>
 	</target>
@@ -120,7 +122,7 @@
 
 	<target name="core" depends="init">
 		<mkdir dir="classes"/>
-		<javac destdir="classes" srcdir="source" debug="on" source="1.5" deprecation="on">
+		<javac destdir="classes" srcdir="source" debug="on" source="${java.target.version}" deprecation="on">
             <!-- swing -->
 			<exclude name="**/swing/**"/>
             <!-- swt -->
@@ -137,7 +139,7 @@
 	</target>
 
 	<target name="swing" depends="core">
-		<javac destdir="classes" srcdir="source" debug="on" source="1.5" deprecation="on">
+		<javac destdir="classes" srcdir="source" debug="on" source="${java.target.version}" deprecation="on">
 			<include name="**/swing/**"/>
 		</javac>
 	</target>
@@ -147,13 +149,13 @@
 		<available classname="org.eclipse.swt.SWT" property="swt.present"/>
 		<fail unless="swt.present" message="To run this task, add swt.jar to your CLASSPATH. SWT is available free at http://www.eclipse.org"/>
 		<!-- Compile the java code from source/ into classes/ -->
-		<javac destdir="classes" srcdir="source" debug="on" source="1.5">
+		<javac destdir="classes" srcdir="source" debug="on" source="${java.target.version}">
 			<include name="**/swt/**"/>
 		</javac>
 	</target>
 
 	<target name="io" depends="core">
-		<javac destdir="classes" srcdir="source" debug="on" source="1.5" deprecation="on">
+		<javac destdir="classes" srcdir="source" debug="on" source="${java.target.version}" deprecation="on">
 			<include name="**/ctp/**"/>
 			<include name="**/io/**"/>
 			<include name="**/nio/**"/>
@@ -163,7 +165,7 @@
 	</target>
 
 	<target name="demo" depends="core,swing">
-		<javac destdir="classes" srcdir="source" debug="on" source="1.5" deprecation="on">
+		<javac destdir="classes" srcdir="source" debug="on" source="${java.target.version}" deprecation="on">
 			<include name="**/demo/**"/>
 			<exclude name="**/swt/**"/>
 		</javac>
@@ -207,37 +209,34 @@
         <echo message="using tools = ${env.JAVA_HOME}/lib/tools.jar"/>
         <delete dir="java14_glazedlists"/>
         <mkdir dir="java14_glazedlists/source"/>
+        <mkdir dir="java14_glazedlists/test"/>
         <java classname="ca.odell.glazedlists.impl.java15.Declawer">
             <classpath>
                 <pathelement path="${env.JAVA_HOME}/lib/tools.jar"/>
                 <pathelement path="classes"/>
             </classpath>
-            <arg value="source:test"/>
+            <arg value="source"/>
             <arg value="${ant.home}/lib/junit.jar"/>
             <arg value="java14_glazedlists/source"/>
         </java>
-        <mkdir dir="java14_glazedlists/classes"/>
-        <javac destdir="java14_glazedlists/classes" srcdir="java14_build/source" debug="on" source="1.4" target="1.4" deprecation="on">
-        </javac>
+        <java classname="ca.odell.glazedlists.impl.java15.Declawer">
+            <classpath>
+                <pathelement path="${env.JAVA_HOME}/lib/tools.jar"/>
+                <pathelement path="classes"/>
+                <pathelement path="${ant.home}/lib/junit.jar"/>
+            </classpath>
+            <arg value="test"/>
+            <arg value="classes;${ant.home}/lib/junit.jar"/>
+            <arg value="java14_glazedlists/test"/>
+        </java>
         <copy todir="java14_glazedlists">
             <fileset dir=".">
-                <exclude name="source"/>
-                <exclude name="test"/>
+                <exclude name="java14_glazedlists/**"/>
+                <exclude name="source/**"/>
+                <exclude name="test/**"/>
             </fileset>
         </copy>
-        <!--<tstamp prefix="jar">-->
-            <!--<format property="datestamp" pattern="yyyy-MM-dd H:mm"/>-->
-        <!--</tstamp>-->
-        <!--<jar destfile="glazedlists_java13.jar" update="true" index="true">-->
-            <!--<fileset dir="classes"/>-->
-            <!--<manifest>-->
-                <!--<attribute name="Sealed" value="true"/>-->
-                <!--<attribute name="Built-By" value="${user.name}"/>-->
-                <!--<attribute name="Implementation-Version" value="${jar.datestamp}"/>-->
-                <!--<attribute name="Implementation-Title" value="Glazed Lists for Java 1.3"/>-->
-                <!--<attribute name="Implementation-URL" value="http://publicobject.com/glazedlists/"/>-->
-            <!--</manifest>-->
-        <!--</jar>-->
+        <replace file="java14_glazedlists/build.xml" token="&lt;property name=&quot;java.target.version&quot; value=&quot;1.5&quot;/&gt;" value="&lt;property name=&quot;java.target.version&quot; value=&quot;1.4&quot;/&gt;"/>
     </target>
 
 
@@ -271,7 +270,7 @@
 		<available classname="junit.framework.TestCase" property="junit.present"/>
 		<fail unless="junit.present" message="To run this task, install junit.jar and optional.jar into ${ant.home}/lib/ JUnit is available free at http://www.junit.org"/>
 		<!-- Compile the test classes from source/ into classes/ -->
-		<javac destdir="classes" srcdir="test" debug="on" source="1.4">
+		<javac destdir="classes" srcdir="test" debug="on" source="${java.target.version}">
 			<classpath path="${ant.home}/lib/junit.jar"/>
 		</javac>
 		<!-- Execute JUnit tests -->
