Java 1.5 source port
git-svn-id: https://svn.java.net/svn/glazedlists~svn/branches/java15@1005 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -182,6 +182,9 @@
         <javac destdir="classes" srcdir="source" debug="on" source="1.3" target="1.3" deprecation="on">
             <include name="**/event/**"/>
             <include name="**/BasicEventList.java"/>
+            <include name="**/ObservableElementList.java"/>
+            <include name="**/JavaBeanEventListConnector.java"/>
+            <include name="**/AbstractFilterList.java"/>
             <include name="**/EventList.java"/>
             <include name="**/SubEventList.java"/>
             <include name="**/EventListIterator.java"/>
