--- a/build.xml
+++ b/build.xml
@@ -50,7 +50,6 @@
 			destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="1.4">
 			<packageset dir="source">
 				<exclude name="**/impl/**"/>
-				<exclude name="**/demo/**"/>
 			</packageset>
 			<doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
 			<bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2005 publicobject.com, O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
@@ -93,7 +92,7 @@
 	   COMPILE
 	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-	<target name="compile" depends="core,swing,demo,io"
+	<target name="compile" depends="core,swing,io"
 		description="Compile the source.">
 	</target>
 
@@ -110,8 +109,6 @@
 			<exclude name="**/nio/**"/>
 			<exclude name="**/pmap/**"/>
 			<exclude name="**/rbp/**"/>
-            <!-- demo -->
-			<exclude name="**/demo/**"/>
 		</javac>
 	</target>
 
@@ -140,14 +137,6 @@
 			<include name="**/rbp/**"/>
 		</javac>
 	</target>
-
-	<target name="demo" depends="core,swing">
-		<javac destdir="classes" srcdir="source" debug="on" source="1.4" deprecation="on">
-			<include name="**/demo/**"/>
-			<exclude name="**/swt/**"/>
-		</javac>
-	</target>
-
 
 
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
