Cleaning up for Glazed Lists 1.0. This is a breaking change, details will be in the release notes.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1030 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -92,7 +92,7 @@
 	   COMPILE
 	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-	<target name="compile" depends="core,swing,io"
+	<target name="compile" depends="core,swing"
 		description="Compile the source.">
 	</target>
 
