Cleaning up for Glazed Lists 1.0. This is a breaking change, details will be in the release notes.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1032 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -93,7 +93,11 @@
 	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 	<target name="compile" depends="core,swing"
-		description="Compile the source.">
+		description="Compile the default components of the source.">
+	</target>
+
+	<target name="compile_all" depends="core,migrationkit,swing,swt,io"
+		description="Compile all components of the source.">
 	</target>
 
 	<target name="core" depends="init">
