Cleaning up for Glazed Lists 1.0. This is a breaking change, details will be in the release notes.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1034 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -210,7 +210,7 @@
 	   This task depends on JUnit, available free at http://www.junit.org
 	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-	<target name="test" depends="init,compile,swt"
+	<target name="test" depends="init,compile_all"
 		description="Compile unit tests and run them using JUnit.">
 		<mkdir dir="classes"/>
 		<!-- Verify that JUnit is available on the classpath -->
