Altered target for demo jar to include the resources so the sorting icons show up in the demo!
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1082 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,8 @@
 		</delete>
 		<!-- Delete the generated .jar -->
 		<delete file="glazedlists.jar"/>
+		<!-- Delete the generated demo .jar -->
+		<delete file="glazedlists-demo.jar"/>
 		<!-- Delete the generated source -->
 		<delete file="glazedlists-source.zip"/>
 	</target>
@@ -303,6 +305,9 @@
         </javac>
         <jar destfile="glazedlists-demo.jar" update="true" index="true">
             <fileset dir="classes"/>
+            <fileset dir=".">
+                <include name ="**/resources/**"/>
+            </fileset>
             <fileset dir="test">
                 <include name ="**/demo/*.gif"/>
             </fileset>
