--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,6 @@
 
 <project name="glazedlists" default="jar" basedir=".">
 
-
     <property name="java.target.version" value="1.5"/>
 
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -194,32 +193,24 @@
     </target>
 
     <target name="java14" depends="init,compileall,compiletests" description="Compile Glazed Lists for deployment on a J2SE 1.4">
-        <property environment="env"/>
-        <path id="declawerPath">
-            <pathelement path="classes"/>
-            <pathelement path="${env.JAVA_HOME}/lib/tools.jar"/><!-- tools on Sun JVMs -->
-            <pathelement path="${env.JAVA_HOME}/../Classes/classes.jar"/><!-- tools on Apple JVMs -->
-        </path>
-        <property name="declawerPathProperty" refid="declawerPath"/>
-
-
-        <echo message="using JAVA HOME = ${env.JAVA_HOME}"/>
-        <echo message="using tools = ${declawerPathProperty}"/>
-
         <!-- clean the java14 directory -->
         <delete dir="java14_glazedlists"/>
         <mkdir dir="java14_glazedlists/source"/>
         <mkdir dir="java14_glazedlists/test"/>
 
         <!-- Declaw the source code to the java14 directory. -->
-        <java classname="ca.odell.glazedlists.impl.java15.Declawer" classpathref="declawerPath">
+        <java classname="com.publicobject.declawer.Declawer">
+            <classpath path="declawer.jar"/>
+
             <arg value="source"/>
             <arg value="${ant.home}/lib/junit.jar"/>
             <arg value="java14_glazedlists/source"/>
         </java>
 
         <!-- Declaw the tests to the java14 directory. -->
-        <java classname="ca.odell.glazedlists.impl.java15.Declawer" classpathref="declawerPath">
+        <java classname="com.publicobject.declawer.Declawer">
+            <classpath path="declawer.jar"/>
+
             <arg value="test"/>
             <arg value="classes${path.separator}${ant.home}/lib/junit.jar"/>
             <arg value="java14_glazedlists/test"/>
